CHANGELOG

2.0.18
UTILS:
* pan-os-php / API / bash_autocompletion | extend with script xml-op-json and bpa-generator

BUGFIX:
* UTIL all object merger script | bugfix to support argument DupAlgorithm [thanks to Necip Cebeci for finding and reporting this bug]

GENERAL:
* dockerfile - introduce bash_autocompletion for Dockerfile-cli - usage of ubuntu CLI with PAN-OS-PHP installed
* framework - update ubuntu_set_path_variable.sh - full installation is now possible, if Ubuntu is pre-installed


2.0.17 (20211015)
UTILS:
* pan-os-php and API | introduce support for rule-merger
* XML_op_JSON | move to class XMLOPJSON extend UTIL
* register-ip-mgr | move to class UTIL( 'custom' )
* userid-mgr | move to class UTIL( 'custom' )
* pa_userid-mgr | introduce actions=display and unregister-all
* pa_register-ip-mgr and pa_userid-mgr | introduce class REGISTERIP and USERIDMGR
* pan-os-php and API | extend to support register-ip-mgr and userid-mgr
* pan-os-php bash-autocompletion - extend with all available UTIL script - to finalise the single entry by using PAN-OS-PHP framework

BUGFIX:

GENERAL:


2.0.16 (20211014)
UTILS:
* pa_panos-xml-issue-detector | improvement to use parent methods from class UTIL
* pa_appid-enabler / pa_config-size / pa_upload-config - improve to use parent available methods from class UTIL
* UTIL - pa_config-size / pa_diff / pa_override-finder / pa_upload - optimisation to use more of class UTIL
* pa_application-edit | introduce 'filter=(object has.member XYZ)'
* pa_application-edit - improve actions=display for applicationGroup
* pa_rule-merger | move everything into class RULEMERGER
* pa_upload-config | skip adding user admin2 if already available
* pa_rule-merger | introduce functionality for location=any to run rule-merger with a single run against all DG

BUGFIX:
* pa_appid-enabler | bugfix regarding how variables are used, after moving over to class APPIDENABLER()
* pa_address-merger | bugfix for call class MERGER()