@@ -3,6 +3,7 @@ CHANGELOG
 2.0.18
 UTILS:
 * pan-os-php / API / bash_autocompletion | extend with script xml-op-json and bpa-generator
+* pa_key-manager | introduce support for license-apikey/bpa-api-key | extend class PanAPIConnector to store both apikey in .panconfkeystore
 
 BUGFIX:
 * UTIL all object merger script | bugfix to support argument DupAlgorithm [thanks to Necip Cebeci for finding and reporting this bug]
